---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 2020-05-28
  Changes:
    - moved plates to Dectorio recipe group (if installed)
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 2020-05-26
  Bugfixes:
    - Quick fix for base GUI changes (styles and search icon)
---------------------------------------------------------------------------------------------------
Version: 0.18.0
Date: 2020-04-08
  Changes:
    - Mod takeover from https://mods.factorio.com/mod/IndustrialDisplays
    - Changed versioning
    - Changed changelog date format
    - Changed mod name
  Features:
    - Added german locale
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2020-03-26
  Bugfixes:
    - Fixed a typo that caused problems for mods that raise custom revive events.
  Known issues:
    - Plate settings are not restored by undo/CTRL-Z. This can't be fixed.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2020-03-22
  Bugfixes:
    - Localised name searches were removed. The search filter now only matches against internal names.
    - Better checking for open GUIs on plates being mined/destroyed.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2020-03-20
  Changes:
    - Added a search filter, which works with the localised (translated) names of items.
    - I heard you don't like displays, so I removed displays that display displays.
  Bugfixes:
    - Plate GUI closes if the owner was removed/destroyed.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2020-03-17
  Bugfixes:
    - Minor style updates to reflect recent changes to the character GUI.