@@ -4,7 +4,9 @@
 	"title": "Industrial Display Plates",
 	"author": "Wyrrrd",
 	"homepage": "https://github.com/Wyrrrd/IndustrialDisplayPlates",
-	"dependencies": ["base >= 0.18.27"],
+	"dependencies": [
+		"base >= 0.18.27"
+	],
 	"description": "Big, medium and small signs which display item and fluid icons. Can be used to blueprint map markers.",
 	"factorio_version": "0.18"
 }
