@@ -3,6 +3,8 @@ Version: 0.18.2
 Date: 2020-05-28
   Changes:
     - moved plates to Dectorio recipe group (if installed)
+  Bugfixes:
+    - removed check for show_in_library (removed in 0.18.37)
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: 2020-05-26
